# Parallax

./: .gitignore  BUILD_HANDOFF.md  LICENSE  NOTICE  README.md  progress.md
parallax/: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  alertmanager.yml  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  prometheus.yml  prometheus_rule_tests.yml  pyproject.toml  requirements.txt
parallax/.venv-fast/: pyvenv.cfg
parallax/.venv-fast/Scripts/: activate  activate.bat  pywin32_postinstall.py  pywin32_testall.py
parallax/deploy/: Caddyfile  DEPLOY.md  bootstrap.sh
parallax/docs/: README.md  collateral.md  fixes.md  pricing.md  security.md  whitepaper.md
parallax/docs/admin/: configuration.md  installation.md  monitoring.md  scaling.md  validation.md
parallax/docs/api/: README.md
parallax/docs/architecture/: README.md  hook_planner_prompt_design.md
parallax/docs/runbooks/: README.md  backup_restore.md
parallax/docs/user/: faq.md  getting-started.md  report-guide.md  verdicts.md
parallax/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
parallax/frontend/src/: App.tsx  index.css  styles.css
parallax/migrations/: env.py
parallax/migrations/versions/: 0001_initial.py  0002_add_foreign_keys.py  0002_hypothesis.py  0003_hypothesis.py  0004_add_observations_and_links.py  0005_add_taint_flows.py  0006_captured_at_bigint.py  0007_add_webhook_url.py  0008_add_batch_id.py  0009_add_tenant_id.py
parallax/parallax/: __init__.py
parallax/parallax/agents/: __init__.py
parallax/parallax/ai/: confidence.py  debate.py  llm.py  ollama_client.py  orchestration.py  risk.py  schemas.py
parallax/parallax/api/: idempotency.py  main.py  openapi.json  rate_limit.py  security.py
parallax/parallax/core/: __init__.py  audit.py  circuit_breaker.py  config.py  database.py  errors.py  logging.py  metrics.py  models.py  storage.py  telemetry.py
parallax/parallax/delivery/: fraud_chain.py  fraud_rules.py  report_generator.py  stix_exporter.py  webhook_dispatcher.py  yara_generator.py
parallax/parallax/knowledge/: campaign_detection.py  graph_health.py  ioc_matcher.py  misp_sync.py  neo4j_client.py  pattern_memory.py  population.py  qdrant_store.py
parallax/parallax/sandbox/: launcher.py  pool.py  runner.py
parallax/parallax/workers/: celery_app.py  delivery_worker.py  dynamic_worker.py  heartbeat.py  idempotency.py  mixins.py  reaper.py  reasoning_worker.py  static_worker.py  triage_worker.py
parallax/results/: degradation_matrix_proof.txt  emulator_pool_proof.txt
parallax/sandbox/: Dockerfile.emulator  entrypoint-emulator.sh
parallax/scripts/: band_autoroom.py  build_corpus.py  chaos_emulator.py  drill_postgres_restore.py  ensure_docker_desktop_kvm.ps1  export_openapi.py  fetch_fdroid_benign.py  fetch_sample.py  generate_sdks.py  init_neo4j.py  init_qdrant.py  phase_preflight.py  run_corpus.py  run_pipeline.py  setup_band_venv.sh  smoke_cloud.py  start-emulator.sh  train_calibration.py  verify_migration_roundtrip.py
parallax/tests/: conftest.py
parallax/tests/integration/: test_avd.py  test_droidbot.py  test_dynamic_api.py  test_install.py  test_knowledge.py
parallax/tests/unit/: test_analyze.py  test_api.py  test_apkid_runner.py  test_band_adapter.py  test_band_agents.py  test_band_case_room.py  test_band_demo_case.py  test_band_evidence_bundle.py  test_band_orchestrator.py  test_band_room_protocol.py  test_band_transcript_export.py  test_batch.py  (+43 more)
(+155 files in other folders)
