[project]
name = "parallax"
version = "0.1.0"
description = "GenAI-native automated malware reverse engineering and APK fraud analysis platform"
authors = [
    { name = "PARALLAX Team", email = "team@parallax.local" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "structlog>=24.1.0",
    "neo4j>=5.20.0",
    "qdrant-client>=1.9.0",
    "redis>=5.0.4",
    "celery>=5.4.0",
    "minio>=7.2.7",
    "ollama>=0.2.0",
    "langgraph>=0.0.60",
    "crewai>=0.30.0",
    "apkid>=2.1.2",
    "androguard>=3.4.0",
    "frida-tools>=12.3.0",
    "mitmproxy>=10.3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --asyncio-mode=auto"
testpaths = [
    "tests",
]
