[project]
name = "parallax"
version = "0.1.0"
description = "GenAI-native automated malware reverse engineering and APK fraud analysis platform"
authors = [
    { name = "PARALLAX Team", email = "team@parallax.local" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Layer 1: Ingestion
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "sqlalchemy>=2.0.34",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.2",
    "celery[redis]>=5.4.0",
    "redis>=5.0.8",
    "minio>=7.2.7",
    "python-multipart>=0.0.10",
    "httpx>=0.27.2",
    # Layer 2: Analysis
    "androguard>=4.1.0",
    "networkx>=3.3",
    "yara-python>=4.5.0",
    "frida-tools>=13.0.0",
    "mitmproxy>=11.0.0",
    "scapy>=2.5.0",
    "opencv-python>=4.10.0",
    "pillow>=10.4.0",
    "sentence-transformers>=3.1.0",
    # Layer 3: AI Cortex
    "ollama>=0.3.0",
    "langgraph>=0.2.0",
    "langchain>=0.2.16",
    "langchain-community>=0.2.16",
    "crewai>=0.80.0",
    "llama-index>=0.12.0",
    "dspy>=2.5.0",
    "openai>=1.51.0",
    "anthropic>=0.36.0",
    # Layer 4: Knowledge
    "neo4j>=5.24.0",
    "qdrant-client>=1.10.0",
    "pymisp>=2.4.200",
    # Layer 5: Delivery
    "jinja2>=3.1.4",
    "weasyprint>=63.1",
    "reportlab>=4.2.0",
    "stix2>=3.0.1",
    # Observability
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.2",
    "ruff>=0.6.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --asyncio-mode=auto"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["parallax"]
omit = ["tests/*"]
